include/libheif/heif.h

struct heif_context;
enum heif_error_code
{
  heif_error_Ok = 0,
  heif_error_Input_does_not_exist = 1,
  heif_error_Invalid_input = 2,
  heif_error_Unsupported_filetype = 3,
  heif_error_Unsupported_feature = 4,
  heif_error_Usage_error = 5,
  heif_error_Memory_allocation_error = 6,
  heif_error_Decoder_plugin_error = 7,
  heif_error_Encoder_plugin_error = 8,
  heif_error_Encoding_error = 9,
  heif_error_Color_profile_does_not_exist = 10,
  heif_error_Plugin_loading_error = 11,
  heif_error_Canceled = 12
};
enum heif_suberror_code
{
  heif_suberror_Unspecified = 0,
  heif_suberror_End_of_data = 100,
  heif_suberror_Invalid_box_size = 101,
  heif_suberror_No_ftyp_box = 102,
  heif_suberror_No_idat_box = 103,
  heif_suberror_No_meta_box = 104,
  heif_suberror_No_hdlr_box = 105,
  heif_suberror_No_hvcC_box = 106,
  heif_suberror_No_pitm_box = 107,
  heif_suberror_No_ipco_box = 108,
  heif_suberror_No_ipma_box = 109,
  heif_suberror_No_iloc_box = 110,
  heif_suberror_No_iinf_box = 111,
  heif_suberror_No_iprp_box = 112,
  heif_suberror_No_iref_box = 113,
  heif_suberror_No_pict_handler = 114,
  heif_suberror_Ipma_box_references_nonexisting_property = 115,
  heif_suberror_No_properties_assigned_to_item = 116,
  heif_suberror_No_item_data = 117,
  heif_suberror_Invalid_grid_data = 118,
  heif_suberror_Missing_grid_images = 119,
  heif_suberror_Invalid_clean_aperture = 120,
  heif_suberror_Invalid_overlay_data = 121,
  heif_suberror_Overlay_image_outside_of_canvas = 122,
  heif_suberror_Auxiliary_image_type_unspecified = 123,
  heif_suberror_No_or_invalid_primary_item = 124,
  heif_suberror_No_infe_box = 125,
  heif_suberror_Unknown_color_profile_type = 126,
  heif_suberror_Wrong_tile_image_chroma_format = 127,
  heif_suberror_Invalid_fractional_number = 128,
  heif_suberror_Invalid_image_size = 129,
  heif_suberror_Invalid_pixi_box = 130,
  heif_suberror_No_av1C_box = 131,
  heif_suberror_Wrong_tile_image_pixel_depth = 132,
  heif_suberror_Unknown_NCLX_color_primaries = 133,
  heif_suberror_Unknown_NCLX_transfer_characteristics = 134,
  heif_suberror_Unknown_NCLX_matrix_coefficients = 135,
  heif_suberror_Invalid_region_data = 136,
  heif_suberror_No_ispe_property = 137,
  heif_suberror_Camera_intrinsic_matrix_undefined = 138,
  heif_suberror_Camera_extrinsic_matrix_undefined = 139,
  heif_suberror_Invalid_J2K_codestream = 140,
  heif_suberror_No_vvcC_box = 141,
  heif_suberror_No_icbr_box = 142,
  heif_suberror_No_avcC_box = 143,
  heif_suberror_Invalid_mini_box = 149,
  heif_suberror_Decompression_invalid_data = 150,
  heif_suberror_Security_limit_exceeded = 1000,
  heif_suberror_Compression_initialisation_error = 1001,
  heif_suberror_Nonexisting_item_referenced = 2000, 
  heif_suberror_Null_pointer_argument = 2001,
  heif_suberror_Nonexisting_image_channel_referenced = 2002,
  heif_suberror_Unsupported_plugin_version = 2003,
  heif_suberror_Unsupported_writer_version = 2004,
  heif_suberror_Unsupported_parameter = 2005,
  heif_suberror_Invalid_parameter_value = 2006,
  heif_suberror_Invalid_property = 2007,
  heif_suberror_Item_reference_cycle = 2008,
  heif_suberror_Unsupported_codec = 3000,
  heif_suberror_Unsupported_image_type = 3001,
  heif_suberror_Unsupported_data_version = 3002,
  heif_suberror_Unsupported_color_conversion = 3003,
  heif_suberror_Unsupported_item_construction_method = 3004,
  heif_suberror_Unsupported_header_compression_method = 3005,
  heif_suberror_Unsupported_generic_compression_method = 3006,
  heif_suberror_Unsupported_essential_property = 3007,
  heif_suberror_Unsupported_bit_depth = 4000,
  heif_suberror_Cannot_write_output_data = 5000,
  heif_suberror_Encoder_initialization = 5001,
  heif_suberror_Encoder_encoding = 5002,
  heif_suberror_Encoder_cleanup = 5003,
  heif_suberror_Too_many_regions = 5004,
  heif_suberror_Plugin_loading_error = 6000,         
  heif_suberror_Plugin_is_not_loaded = 6001,         
  heif_suberror_Cannot_read_plugin_directory = 6002, 
  heif_suberror_No_matching_decoder_installed = 6003 
};
struct heif_error
{
  enum heif_error_code code;
  enum heif_suberror_code subcode;
  const char* message;
};
enum heif_compression_format
{
  heif_compression_undefined = 0,
  heif_compression_HEVC = 1,
  heif_compression_AVC = 2,
  heif_compression_JPEG = 3,
  heif_compression_AV1 = 4,
  heif_compression_VVC = 5,
  heif_compression_EVC = 6,
  heif_compression_JPEG2000 = 7,
  heif_compression_uncompressed = 8,
  heif_compression_mask = 9,
  heif_compression_HTJ2K = 10
};
LIBHEIF_API
struct heif_context* heif_context_alloc(void);
LIBHEIF_API
void heif_context_free(struct heif_context*);
struct heif_reading_options;
enum heif_reader_grow_status
{
  heif_reader_grow_status_size_reached,    
  heif_reader_grow_status_timeout,         
  heif_reader_grow_status_size_beyond_eof, 
  heif_reader_grow_status_error            
};
struct heif_reader_range_request_result
{
  enum heif_reader_grow_status status; 
  uint64_t range_end;
  int reader_error_code;        
  const char* reader_error_msg; 
};
struct heif_reader
{
  int reader_api_version;
  int64_t (* get_position)(void* userdata);
  int (* read)(void* data,
               size_t size,
               void* userdata);
  int (* seek)(int64_t position,
               void* userdata);
  enum heif_reader_grow_status (* wait_for_file_size)(int64_t target_size, void* userdata);
  struct heif_reader_range_request_result (*request_range)(uint64_t start_pos, uint64_t end_pos, void* userdata);
  void (*preload_range_hint)(uint64_t start_pos, uint64_t end_pos, void* userdata);
  void (*release_file_range)(uint64_t start_pos, uint64_t end_pos, void* userdata);
  void (*release_error_msg)(const char* msg);
};
LIBHEIF_API
struct heif_error heif_context_read_from_file(struct heif_context*, const char* filename,
                                              const struct heif_reading_options*);
LIBHEIF_API
void heif_context_set_maximum_image_size_limit(struct heif_context* ctx, int maximum_width);
struct heif_security_limits {
  uint8_t version;
  uint64_t max_image_size_pixels;
  uint64_t max_number_of_tiles;
  uint32_t max_bayer_pattern_pixels;
  uint32_t max_items;
  uint32_t max_color_profile_size;
  uint64_t max_memory_block_size;
  uint32_t max_components;
  uint32_t max_iloc_extents_per_item;
  uint32_t max_size_entity_group;
  uint32_t max_children_per_box; 
};
LIBHEIF_API
const struct heif_security_limits* heif_get_global_security_limits();
LIBHEIF_API
const struct heif_security_limits* heif_get_disabled_security_limits();
LIBHEIF_API
struct heif_security_limits* heif_context_get_security_limits(const struct heif_context*);
LIBHEIF_API
struct heif_error heif_context_set_security_limits(struct heif_context*, const struct heif_security_limits*);